@@ -39,8 +39,8 @@
 
 %define name python
 #--start constants--
-%define version 3.4.0rc1
-%define libvers 3.4
+%define version 3.5.0a0
+%define libvers 3.5
 #--end constants--
 %define release 1pydotorg
 %define __prefix /usr
