@@ -2,6 +2,17 @@
 Python News
 +++++++++++
 
+What's New in Python 3.5 alpha 1?
+=================================
+
+Release date: TBA
+
+Core and Builtins
+-----------------
+
+Library
+-------
+
 What's New in Python 3.4.1rc1?
 ==============================
 
